--- a/index.html
+++ b/index.html
@@ -512,9 +512,9 @@
 			        	</a>
 			        </div>
 			    </div>
-		        <div class="modal-footer">
+<!-- 		        <div class="modal-footer">
 		          <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-		        </div>
+		        </div> -->
 		      </div>
 		    </div>
 		</div>
