new image gifts

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 					<figcaption>
 						<h4>Clique e veja...</h4>
 						<p style="color:white;">
-							Lista de presentes
+							Listas de presentes
 							<a data-toggle="modal" href="#myModal">
 								<b><font  size="1" color="#ff33cc">CLIQUE AQUI</font></b>
 							</a>
@@ -512,7 +512,7 @@
 			        	</a>
 			        </div>
 			    </div>
-<!-- 		        <div class="modal-footer">
+				<!-- <div class="modal-footer">
 		          <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
 		        </div> -->
 		      </div>
