--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
 				<div class="col-md-6 w3_agile_mail_grid">
 					<input type="text" name="nome" placeholder="Seu nome"  required="">
 					<input type="email" name="email" placeholder="Seu email" required="">
-					<input type="hidden" name="_next" value="https://flavio7eixeira.github.io/casamento/index.html?suc=1" />
+					<input type="hidden" name="_next" value="http://flavioedaiane.com.br/index.html?suc=1" />
 					<input type="hidden" name="_language" value="pt" />
 					<input type="submit" value="Enviar">
 				</div>
