--- a/index.html
+++ b/index.html
@@ -130,11 +130,22 @@
 			<p class="sub_para">UM POUCO SOBRE NÓS</p>
 			<br/>
 			<br/>
-			<div style="width: 90%; margin: auto;">
-				<center>
-					<h3><b>Nós nos conhecemos em xpot, quando estavamos andando bla bla bla...
-					Nós nos conhecemos em xpot, quando estavamos andando bla bla bla...</b></h3>
-				</center>
+			<div style="width: 80%; margin: auto; font-family: sans-serif;">
+				
+					<h3 align="justify">
+						<b>
+							Nosso namoro começou no final do ano de 2008... Todos esses anos juntos houve muita troca de carinho, cumplicidade e amor.
+							<br /><br />
+							Em Janeiro de 2017 decidimos dar mais um passo muito importante em nossas vidas. 
+							<br /><br />
+							<center>
+								Vamos nos casar!!! \o/
+							</center>
+							<br /><br />
+							Convidamos vocês, nossos familiares, padrinhos e amigos a celebrarem essa data especial muito especial conosco!
+						</b>
+					</h3>
+				
 			</div>
 
 			<div class="inner_w3l_agile_grids">
@@ -196,7 +207,7 @@
 					<h5><i class="fa fa-calendar" aria-hidden="true"></i> 15 / 05 / 2018</h5>
 					<h5><i class="fa fa-clock-o" aria-hidden="true"></i> 10h até 20h</h5>
 				</div>
-				<div class="icon_wthree"><img src="images/ring.png" alt="" /></div>
+				<div class="icon_wthree"><img src="images/ring2.png" alt="" /></div>
 			</div>
 			<div class="clearfix"></div>	
 
@@ -247,7 +258,7 @@
 	<!--/counter-->
 	<div class="agileinfo_counter_section">
 		<div class="wthree_title_agile">
-			<h3 class="h-t">A festa <span>está chegando</span></h3>
+			<h3 class="h-t">Falta pouco tempo para <span>esta data especial</span></h3>
 			<p><i class="fa fa-heart-o" aria-hidden="true"></i></p>
 		</div>
 		<!--p class="sub_para two">FALTA POUCO!</p -->
@@ -483,7 +494,7 @@
 							<div class="col-md-6 w3_agile_mail_grid">
 								<input type="text" name="nome" placeholder="Seu nome"  required="">
 								<input type="email" name="email" placeholder="Seu email" required="">
-								<input type="hidden" name="_next" value="https://flavio7eixeira.github.io/casamento/index.html?suc=1" />
+								<input type="hidden" name="_next" value="http://flavioedaiane.com.br/index.html?suc=1" />
 								<input type="hidden" name="_language" value="pt" />
 								<input type="submit" value="Enviar">
 							</div>
