--- a/index.html
+++ b/index.html
@@ -130,21 +130,21 @@
 			<p class="sub_para">UM POUCO SOBRE NÓS</p>
 			<br/>
 			<br/>
-			<div style="width: 80%; margin: auto; font-family: sans-serif;">
+			<div style="width: 80%; margin: auto;">
 				
-					<h3 align="justify">
-						<b>
+					<font face="ans-serif" size="5" color="#464545">
+						<center>
 							Nosso namoro começou no final do ano de 2008... Todos esses anos juntos houve muita troca de carinho, cumplicidade e amor.
 							<br /><br />
 							Em Janeiro de 2017 decidimos dar mais um passo muito importante em nossas vidas. 
 							<br /><br />
 							<center>
-								Vamos nos casar!!! \o/
+								<b>Vamos nos casar!!! \o/</b>
 							</center>
-							<br /><br />
+							<br />
 							Convidamos vocês, nossos familiares, padrinhos e amigos a celebrarem essa data especial muito especial conosco!
-						</b>
-					</h3>
+						</center>
+					</font>
 				
 			</div>
 
