--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<br/>
 			<div style="width: 80%; margin: auto;">
 				
-					<font face="ans-serif" size="5" color="#464545">
+					<font face="ans-serif" size="5" color="#464545" align="justify">
 						<center>
 							Nosso namoro começou no final do ano de 2008... Todos esses anos juntos houve muita troca de carinho, cumplicidade e amor.
 							<br /><br />
