--- a/index.html
+++ b/index.html
@@ -389,11 +389,11 @@
 				<div class="col-md-6 wthree-right">
 					<div class="w3-agile-left">
 						<div class="work-left">
-							<h4>10hr</h4>
+							<h4>10:00</h4>
 						</div>
 						<div class="agileits-right text-left">
-							<a> Chegada</a>
-							<p>A partir das 10 horas da manhã o evento vai iniciar.</p>
+							<a> - Chegada</a>
+							<p>A partir das 10 horas da manhã iniciasse o evento</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -412,11 +412,11 @@
 					</div>
 					<div class="w3-agile-left2">
 						<div class="work-left">
-							<h4>11hr</h4>
+							<h4>11:30</h4>
 						</div>
 						<div class="agileits-right text-left">
-							<a> Cerimônia</a>
-							<p>Chegada a hora mais importante do dia, a realização da cerimônia de casamento.</p>
+							<a> - Cerimônia</a>
+							<p>Chegada a hora mais importante do dia, a realização da cerimônia de casamento</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -426,18 +426,17 @@
 				<div class="col-md-6 wthree-right">
 					<div class="w3-agile-left">
 						<div class="work-left">
-							<h4>12 Sep</h4>
+							<h4>13:00</h4>
 						</div>
 						<div class="agileits-right text-left">
-							<a href="single.html">News post-3</a>
-							<p>Duis aute irure dolor reprehenderit in voluptate velit esse cillum dolore eu 
-								fugiat nulla pariatur. </p>
+							<a> - Almoço</a>
+							<p>Um cardápio muito especial será servido a todos os convidados</p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
 						<div class="wel-right ">
 							<div class="content-item item-image1">
-								<a href="single.html"><img src="images/e3.jpg" alt="" /></a>
+								<a href="single.html"><img src="images/e4.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div class="clearfix"></div>
@@ -445,22 +444,28 @@
 					<div class="col-md-6 wthree-right no-marg">
 						<div class="wel-right2">
 							<div class="content-item item-image2">
-								<a href="single.html"><img src="images/e4.jpg" alt="" /></a>
+								<a href="single.html"><img src="images/e3.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div class="w3-agile-left2">
 							<div class="work-left">
-								<h4>15 Nov</h4>
+								<h4>15:00</h4>
 							</div>
 							<div class="agileits-right text-left">
-								<a href="single.html">News post-4</a>
-								<p>Duis aute irure dolor reprehenderit in voluptate velit esse cillum dolore eu 
-									fugiat nulla pariatur.</p>
+								<a> - Festa</a>
+								<p>Daqui pra frente será só festa, que se encerrará as 19:00h da noite</p>
 								</div>
 								<div class="clearfix"></div>
 							</div>
 							<div class="clearfix"></div>
 						</div>
+						<div class="map">
+							<div class="wthree_title_agile">
+								<p><i class="fa fa-heart-o" aria-hidden="true"></i></p>
+							</div>
+							<p class="sub_para">MAPA PARA CHEGAR À CERIMÔNIA</p>
+ 							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d121051.5527114768!2d-46.735857679994425!3d-22.922856227021803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ced29104b992ff%3A0xb433b5189c1971bb!2sFazenda+Lageado!5e0!3m2!1spt-BR!2sbr!4v1498484897295"></iframe>
+ 						</div>
 						<div class="clearfix"></div>
 					</div>
 				</div>
