--- a/index.html
+++ b/index.html
@@ -129,25 +129,16 @@
 			</div>
 			<p class="sub_para">UM POUCO SOBRE NÓS</p>
 			<br/>
-			<br/>
-			<div style="width: 80%; margin: auto;">
-				
-					<font face="ans-serif" size="5" color="#464545" align="justify">
-						<center>
-							Nosso namoro começou no final do ano de 2008... Todos esses anos juntos houve muita troca de carinho, cumplicidade e amor.
-							<br /><br />
-							Em Janeiro de 2017 decidimos dar mais um passo muito importante em nossas vidas. 
-							<br /><br />
-							<center>
-								<b>Vamos nos casar!!! \o/</b>
-							</center>
-							<br />
-							Convidamos vocês, nossos familiares, padrinhos e amigos a celebrarem essa data especial muito especial conosco!
-						</center>
-					</font>
-				
+			<div class="home-agile-text" style="width: 80%; margin: auto; border:1px solid gray; text-align: center">
+				<p>
+					<b><font color="black">
+					Nosso namoro começou no final do ano de 2008... Todos esses anos juntos houve muita troca de carinho, cumplicidade e amor.<br /><br />
+					Em Janeiro de 2017 decidimos dar mais um passo muito importante em nossas vidas. <br /><br />
+					Vamos nos casar!!! \o/<br /><br />
+					Convidamos vocês, nossos familiares, padrinhos e amigos a celebrarem essa data especial muito especial conosco!
+					</font></b>
+				</p>
 			</div>
-
 			<div class="inner_w3l_agile_grids">
 				<!-- Bottom to top-->
 				<div class="col-md-6 team-grid">
