--- a/index.html
+++ b/index.html
@@ -129,15 +129,29 @@
 			</div>
 			<p class="sub_para">UM POUCO SOBRE NÓS</p>
 			<br/>
-			<div class="home-agile-text" style="width: 80%; margin: auto; border:1px solid gray; text-align: center">
-				<p>
-					<b><font color="black">
-					Nosso namoro começou no final do ano de 2008... Todos esses anos juntos houve muita troca de carinho, cumplicidade e amor.<br /><br />
-					Em Janeiro de 2017 decidimos dar mais um passo muito importante em nossas vidas. <br /><br />
-					Vamos nos casar!!! \o/<br /><br />
-					Convidamos vocês, nossos familiares, padrinhos e amigos a celebrarem essa data especial muito especial conosco!
-					</font></b>
-				</p>
+			<div>
+				<div class="home-agile-text" style="width: 60%; margin: auto; padding: 2em 3em;">
+					<p align="justify">
+						<b>
+						<font color="#fc3158" size="6">“</font>
+						<font font color="black">
+						Nosso namoro começou no final do ano de 2008... Todos esses anos juntos houve muita troca de carinho, cumplicidade e amor.<br />
+						Em Janeiro de 2017 decidimos dar mais um passo muito importante em nossas vidas.
+						</font>
+						</b>
+					</p>
+				</div>
+				<font color="#fc3158" size="4"><center><b><i>Nós vamos casar!!! \o/</i></b></center></font>
+				<div class="home-agile-text" style="width: 60%; margin: auto; padding: 2em 3em;">		
+					<p align="justify">
+						<b>
+						<font color="black">
+							Convidamos vocês, nossos familiares, padrinhos e amigos a celebrarem essa data muito especial conosco!
+						</font>
+						<font color="#fc3158" size="6">”</font>
+						</b>
+					</p>
+				</div>
 			</div>
 			<div class="inner_w3l_agile_grids">
 				<!-- Bottom to top-->
@@ -444,7 +458,7 @@
 							</div>
 							<div class="agileits-right text-left">
 								<a> - Festa</a>
-								<p>Daqui pra frente será só festa, que se encerrará as 19:00h da noite</p>
+								<p>A diversão começa e so termina as 19:00h da noite. Haverá muita musica boa e confraternização, ou seja, muita festa!</p>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -454,8 +468,17 @@
 							<div class="wthree_title_agile">
 								<p><i class="fa fa-heart-o" aria-hidden="true"></i></p>
 							</div>
-							<p class="sub_para">MAPA PARA CHEGAR À CERIMÔNIA</p>
+							<p class="sub_para">ENDEREÇO & MAPA</p>
+							<div class="home-agile-text">
+								<p>
+									<b>
+										<font color="black">
+									 	“ Estrada Benedicto Olegário Chiovatto, km 2 - Zona Rural, Morungaba - SP, CEP 13260-000 ”
+										</font>
+									</b>
+								</p>
  							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d121051.5527114768!2d-46.735857679994425!3d-22.922856227021803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ced29104b992ff%3A0xb433b5189c1971bb!2sFazenda+Lageado!5e0!3m2!1spt-BR!2sbr!4v1498484897295"></iframe>
+ 							</div>
  						</div>
 						<div class="clearfix"></div>
 					</div>
