--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			<p class="sub_para">UM POUCO SOBRE NÓS</p>
 			<br/>
 			<div>
-				<div class="home-agile-text" style="width: 80%; margin: auto; padding: 2em 3em;">
+				<div class="home-agile-text" style="margin: auto; padding: 2em 3em;">
 					<p align="justify">
 						<b>
 						<font color="#fc3158" size="6">“</font>
@@ -142,7 +142,7 @@
 					</p>
 				</div>
 				<font color="#fc3158" size="4"><center><b><i>Nós vamos casar!!! \o/</i></b></center></font>
-				<div class="home-agile-text" style="width: 80%; margin: auto; padding: 2em 3em;">		
+				<div class="home-agile-text" style="margin: auto; padding: 2em 3em;">		
 					<p align="justify">
 						<b>
 						<font color="black">
