--- a/index.html
+++ b/index.html
@@ -130,25 +130,20 @@
 			<p class="sub_para">UM POUCO SOBRE NÓS</p>
 			<br/>
 			<div>
-				<div class="home-agile-text" style="margin: auto; padding: 2em 3em;">
+				<div class="home-agile-text" style="margin: auto; padding: 2em 3em; background-color: #f3f3f3;">
 					<p align="justify">
 						<b>
-						<font color="#fc3158" size="6">“</font>
-						<font font color="black">
-						Nosso namoro começou no final do ano de 2008... Todos esses anos juntos houve muita troca de carinho, cumplicidade e amor.<br />
-						Em Janeiro de 2017 decidimos dar mais um passo muito importante em nossas vidas.
-						</font>
+							<font color="#fc3158" size="10">“</font>
+							<font font color="black">
+							Nosso namoro começou no final do ano de 2008... Todos esses anos juntos houve muita troca de carinho, cumplicidade e amor.<br><br>
+							Em Janeiro de 2017 decidimos dar mais um passo muito importante em nossas vidas... Nós vamos casar!!! \o/<br><br>
+							Convidamos vocês, nossos familiares, padrinhos e amigos a celebrarem essa data muito especial conosco!
+							</font>
 						</b>
 					</p>
-				</div>
-				<font color="#fc3158" size="4"><center><b><i>Nós vamos casar!!! \o/</i></b></center></font>
-				<div class="home-agile-text" style="margin: auto; padding: 2em 3em;">		
-					<p align="justify">
+					<p align="right">
 						<b>
-						<font color="black">
-							Convidamos vocês, nossos familiares, padrinhos e amigos a celebrarem essa data muito especial conosco!
-						</font>
-						<font color="#fc3158" size="6">”</font>
+							<font color="#fc3158" size="10"> ”</font>
 						</b>
 					</p>
 				</div>
@@ -161,8 +156,6 @@
 						<div class="img"><img src="images/a1.jpg" alt="img" /></div>
 						<div class="info">
 							<h3>Flávio Augusto </br>Teixeira</h3>
-
-
 						</div>
 					</div>
 					<!-- end normal -->
