--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 								<p>
 									<b>
 										<font color="black">
-									 	“ Estrada Benedicto Olegário Chiovatto, km 2 - Zona Rural, Morungaba - SP, CEP 13260-000 ”
+									 	Estrada Benedicto Olegário Chiovatto, km 2 - Zona Rural, Morungaba - SP, CEP 13260-000
 										</font>
 									</b>
 								</p>
