--- a/index.html
+++ b/index.html
@@ -129,24 +129,22 @@
 			</div>
 			<p class="sub_para">UM POUCO SOBRE NÓS</p>
 			<br/>
-			<div>
-				<div class="home-agile-text" style="margin: auto; padding: 2em 3em; background-color: #f3f3f3;">
-					<p align="justify">
-						<b>
-							<font color="#fc3158" size="10">“</font>
-							<font font color="black">
-							Nosso namoro começou no final do ano de 2008... Todos esses anos juntos houve muita troca de carinho, cumplicidade e amor.<br><br>
-							Em Janeiro de 2017 decidimos dar mais um passo muito importante em nossas vidas... Nós vamos casar!!! \o/<br><br>
-							Convidamos vocês, nossos familiares, padrinhos e amigos a celebrarem essa data muito especial conosco!
-							</font>
-						</b>
-					</p>
-					<p align="right">
-						<b>
-							<font color="#fc3158" size="10"> ”</font>
-						</b>
-					</p>
-				</div>
+			<div style="margin: auto; padding: 2em 3em; background-color: #f7f7f7;">
+				<p style="font-family: cursive"; align="justify">
+					<b>
+						<font color="#fc3158" size="10" >“</font>
+						<font color="black" size="4">
+						Nosso namoro começou no final do ano de 2008... Todos esses anos juntos houve muita troca de carinho, cumplicidade e amor.<br><br>
+						Em Janeiro de 2017 decidimos dar mais um passo muito importante em nossas vidas... Nós vamos casar!!! \o/<br><br>
+						Convidamos vocês, nossos familiares, padrinhos e amigos a celebrarem essa data muito especial conosco!
+						</font>
+					</b>
+				</p>
+				<p style="font-family: cursive"; align="right">
+					<b>
+						<font color="#fc3158" size="10"> ”</font>
+					</b>
+				</p>
 			</div>
 			<div class="inner_w3l_agile_grids">
 				<!-- Bottom to top-->
