--- a/index.html
+++ b/index.html
@@ -366,6 +366,18 @@
 							<h5>Karina</h5>
 						</div>
 					</div>
+					<div class="item-owl">
+						<div class="test-review">
+							<img src="images/pa35.jpg" class="img-responsive" alt=""/>
+							<h5>Wanderson</h5>
+						</div>
+					</div>
+					<div class="item-owl">
+						<div class="test-review">
+							<img src="images/ma1.jpg" class="img-responsive" alt=""/>
+							<h5>Andréia</h5>
+						</div>
+					</div>
 				</div>
 				<!--//screen-gallery-->
 			</div>
