--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
 				<h4>Cerimônia de Casamento</h4>
 				<p>Duis aute irure dolor reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem Duis aute irure dolor reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 				<div class="date">
-					<h5><i class="fa fa-calendar" aria-hidden="true"></i> 15 / 05 / 2018</h5>
-					<h5><i class="fa fa-clock-o" aria-hidden="true"></i> 10h até 20h</h5>
+					<h5><i class="fa fa-calendar" aria-hidden="true"></i> 12 / 05 / 2018</h5>
+					<h5><i class="fa fa-clock-o" aria-hidden="true"></i> 15h até 22h</h5>
 				</div>
 				<div class="icon_wthree"><img src="images/ring2.png" alt="" /></div>
 			</div>
@@ -397,11 +397,11 @@
 				<div class="col-md-6 wthree-right">
 					<div class="w3-agile-left">
 						<div class="work-left">
-							<h4>10:00</h4>
+							<h4>15:00</h4>
 						</div>
 						<div class="agileits-right text-left">
 							<a> - Chegada</a>
-							<p>A partir das 10 horas da manhã iniciasse o evento</p>
+							<p>A partir das 15:00 horas da manhã iniciasse o evento</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -420,7 +420,7 @@
 					</div>
 					<div class="w3-agile-left2">
 						<div class="work-left">
-							<h4>11:30</h4>
+							<h4>16:00</h4>
 						</div>
 						<div class="agileits-right text-left">
 							<a> - Cerimônia</a>
@@ -434,10 +434,10 @@
 				<div class="col-md-6 wthree-right">
 					<div class="w3-agile-left">
 						<div class="work-left">
-							<h4>13:00</h4>
+							<h4>18:00</h4>
 						</div>
 						<div class="agileits-right text-left">
-							<a> - Almoço</a>
+							<a> - Jantar</a>
 							<p>Um cardápio muito especial será servido a todos os convidados</p>
 							</div>
 							<div class="clearfix"></div>
@@ -457,11 +457,11 @@
 						</div>
 						<div class="w3-agile-left2">
 							<div class="work-left">
-								<h4>15:00</h4>
+								<h4>19:00</h4>
 							</div>
 							<div class="agileits-right text-left">
 								<a> - Festa</a>
-								<p>A diversão começa e so termina as 19:00h da noite. Haverá muita musica boa e confraternização, ou seja, muita festa!</p>
+								<p>A diversão começa e só termina as 22:00h da noite. Haverá muita musica boa e confraternização, ou seja, muita festa!</p>
 								</div>
 								<div class="clearfix"></div>
 							</div>
