--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 			</div>
 			<div class="col-md-6 home-agile-text">
 				<h4>Cerimônia de Casamento</h4>
-				<p>Duis aute irure dolor reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem Duis aute irure dolor reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+				<p>Uma linda fazenda nos receberá para celebrar este dia especial de nossas vidas. Após a cerimônia, nada como uma festa para animar e comemorar ainda mais este momento! Tudo feito com muito carinho pensando em cada convidado!</p>
 				<div class="date">
 					<h5><i class="fa fa-calendar" aria-hidden="true"></i> 12 / 05 / 2018</h5>
 					<h5><i class="fa fa-clock-o" aria-hidden="true"></i> 15h até 22h</h5>
