--- a/gallery.html
+++ b/gallery.html
@@ -56,11 +56,11 @@
 	<div class="w3l_inner_section">
 		<div class="container">
 			   <div class="wthree_title_agile">
-			        <h2>Wedding  <span>Albums</span></h2>
+			        <h2>Um pouco de <span>nós</span></h2>
 					<p><i class="fa fa-heart-o" aria-hidden="true"></i></p>
 					
 				</div>
-			 <p class="sub_para">WE ARE GETTING MARRIED</p>
+			 <p class="sub_para">MOMENTOS FELIZES</p>
 
 			
 			 <div class="inner_w3l_agile_grids">
