alter list of gifts

--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
 					<figcaption>
 						<h4>Clique e veja...</h4>
 						<p style="color:white;">
-							Listas de presentes
-							<a data-toggle="modal" href="#myModal">
-								<b><font  size="1" color="#ff33cc">CLIQUE AQUI</font></b>
-							</a>
-						<!-- 	<a href="http://www.casasbahia.com.br"> 
+							Lista de presente
+							<!--<a data-toggle="modal" href="#myModal">
 								<b><font  size="1" color="#ff33cc">CLIQUE AQUI</font></b>
 							</a> -->
+							<a href="http://casamento.extra.com.br/#/lista-presentes/663389" target="_blank"> 
+								<b><font  size="1" color="#ff33cc">CLIQUE AQUI</font></b>
+							</a>
 						</p>
 					</figcaption>			
 				</figure>
