--- a/index.html
+++ b/index.html
@@ -344,6 +344,12 @@
 					</div>
 					<div class="item-owl">
 						<div class="test-review">
+							<img src="images/ma99.jpg" class="img-responsive" alt=""/>
+							<h5>Roberta</h5>
+						</div>
+					</div>
+					<div class="item-owl">
+						<div class="test-review">
 							<img src="images/pa5.jpg" class="img-responsive" alt=""/>
 							<h5>Rafael</h5>
 						</div>
