--- a/index.html
+++ b/index.html
@@ -55,11 +55,8 @@
 						</button>
 						<div>
 							<h1><img src="images/in-love.png"/></h1>
-							<!--p class="sub_title">Flávio & Daiane</p -->
 						</div>	
 					</div>
-
-					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<nav class="cl-effect-13" id="cl-effect-13">
 							<ul class="nav navbar-nav">
@@ -68,17 +65,11 @@
 								<li><a href="contact.html">Dúvidas?</a></li>
 							</ul>
 						</nav>
-
 					</div>
-					<!-- /.navbar-collapse -->
 				</div>
-				<!-- /.container-fluid -->
 			</nav> 
-			<!-- //nav -->
 		</div>
 	</header>
-	<!-- //header -->
-	<!-- banner-slider -->
 	<div id="suc" class="alert alert-success fade in alert-dismissable" style="margin-top:18px; display: none">
 	    <a href="#" class="close" data-dismiss="alert" aria-label="close" title="close">×</a>
 	    <strong>Sucesso!</strong> A confirmação de sua presença foi realizada! =D.
@@ -116,10 +107,7 @@
 			</ul>
 			<div class="clearfix"></div>
 		</div>
-
-
 	</div>
-	<!--/story-->
 	<div class="about_section">
 		<div class="container">
 			<div class="wthree_title_agile">
@@ -147,36 +135,28 @@
 				</p>
 			</div>
 			<div class="inner_w3l_agile_grids">
-				<!-- Bottom to top-->
 				<div class="col-md-6 team-grid">
-					<!-- normal -->
 					<div class="ih-item circle effect10 bottom_to_top">
 						<div class="img"><img src="images/a1.jpg" alt="img" /></div>
 						<div class="info">
 							<h3>Flávio Augusto </br>Teixeira</h3>
 						</div>
 					</div>
-					<!-- end normal -->
-					<h4>Noivo</h4>
-			
+					<h4>Noivo</h4>	
 				</div>
 				<div class="col-md-6 team-grid">
-					<!-- normal -->
 					<div class="ih-item circle effect10 bottom_to_top">
 						<div class="img"><img src="images/a2.jpg" alt="img" /></div>
 						<div class="info">
 							<h3>Daiane Dorado</h3>
-
 						</div>
 					</div>
-					<!-- end normal -->
 					<h4>Noiva</h4>
 				</div>
 				<div class="clearfix"></div>
 			</div>
 		</div>
 	</div>
-		<!-- /property-grids -->
 	<div class="property-grids">
 		<div class="agile-homes-w3l  grid">
 			<div class="col-md-6 home-agile-left">
@@ -198,7 +178,8 @@
 			</div>
 			<div class="col-md-6 home-agile-text">
 				<h4>Cerimônia de Casamento</h4>
-				<p>Uma linda fazenda nos receberá para celebrar este dia especial de nossas vidas. Após a cerimônia, nada como uma festa para animar e comemorar ainda mais este momento! Tudo feito com muito carinho pensando em cada convidado!</p>
+				<p>Uma linda fazenda nos receberá para celebrar este dia especial de nossas vidas. Após a cerimônia, nada como uma festa para animar e comemorar 
+				ainda mais este momento! Tudo feito com muito carinho pensando em cada convidado!</p>
 				<div class="date">
 					<h5><i class="fa fa-calendar" aria-hidden="true"></i> 12 / 05 / 2018</h5>
 					<h5><i class="fa fa-clock-o" aria-hidden="true"></i> 15h até 22h</h5>
@@ -209,7 +190,6 @@
 
 		</div>
 	</div>
-	<!-- //property-grids -->
 	<div class="banner-bottom">
 		<div class="wthree_title_agile">
 			<h3>Pais dos<span> noivos</span></h3>
@@ -218,7 +198,6 @@
 		<p class="sub_para">NOSSA BASE</p>
 		<div class="inner_w3l_agile_grids">
 			<div class="sreen-gallery-cursual">
-
 				<div id="owl-demo2" class="owl-carousel">
 					<div class="item-owl">
 						<div class="test-review">
@@ -249,32 +228,23 @@
 			</div>
 		</div>
 	</div>
-	<!--//story-->
-
-	<!--/counter-->
 	<div class="agileinfo_counter_section">
 		<div class="wthree_title_agile">
 			<h3 class="h-t">Falta pouco tempo para <span>esta data especial</span></h3>
 			<p><i class="fa fa-heart-o" aria-hidden="true"></i></p>
 		</div>
-		<!--p class="sub_para two">FALTA POUCO!</p -->
 		<div class="wthree-counter-agile">
-			<!--timer-->
 			<section class="examples">
 				<div class="simply-countdown-losange" id="simply-countdown-losange"></div>
 				<div class="clearfix"></div>
 			</section>
-			<!--//timer-->
 		</div>
 		<div class="clearfix"></div>
 	</div>
-	<!--//counter-->
 	<div class="banner-bottom">
-		<!--//screen-gallery-->
 		<div class="wthree_title_agile">
 			<h3>Padrinhos de <span>casamento</span></h3>
 			<p><i class="fa fa-heart-o" aria-hidden="true"></i></p>
-
 		</div>
 		<p class="sub_para">ELES SÃO DEMAIS!</p>
 		<div class="inner_w3l_agile_grids">
@@ -385,18 +355,14 @@
 						</div>
 					</div>
 				</div>
-				<!--//screen-gallery-->
 			</div>
 		</div>
 	</div>
-
-	<!-- /Events-->
 	<div class="wthree-news text-center" style="background-color: #fdf6f6">
 		<div class="container">
 			<div class="wthree_title_agile">
 				<h3>Sobre o<span> evento</span></h3>
 				<p><i class="fa fa-heart-o" aria-hidden="true"></i></p>
-
 			</div>
 			<p class="sub_para">DETALHES SOBRE O EVENTO</p>
 			<div class="inner_w3l_agile_grids">
@@ -407,7 +373,7 @@
 						</div>
 						<div class="agileits-right text-left">
 							<a> - Chegada</a>
-							<p>A partir das 15:00 horas da manhã iniciasse o evento</p>
+							<p>Neste horário daremos início ao evento aguardando a chegada de todos os convidados</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -482,7 +448,7 @@
 								<p>
 									<b>
 										<font color="black">
-									 	Estrada Benedicto Olegário Chiovatto, km 2 - Zona Rural, Morungaba - SP, CEP 13260-000
+									 	Estrada Benedicto Olegário Chiovatto, km 2 - Zona Rural, Morungaba - SP
 										</font>
 									</b>
 								</p>
@@ -493,10 +459,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- //Events-->
-			<!--/bottom-->
 			<div class="agileinfo_bottom_section">
-
 				<div class="snow-container two">
 					<div class="snow foreground"></div>
 					<div class="snow foreground layered"></div>
@@ -557,7 +520,6 @@
 		      </div>
 		    </div>
 		</div>
-		<!-- footer -->
 		<div class="agile-footer">
 			<div class="container">
 				<div class="aglie-info-logo">
@@ -569,14 +531,13 @@
 					</div>
 			</div>
 		</div>
-			<!-- //footer -->
 
 			<script src="js/bootstrap.min.js"></script>
 			<script src="js/responsiveslides.min.js"></script>
 			<script>
-								// You can also use "$(window).load(function() {"
+								
 								$(function () {
-								  // Slideshow 4
+								  
 								  $("#slider3").responsiveSlides({
 								  	auto: true,
 								  	pager:false,
