--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 							</div>
 							<div class="agileits-right text-left">
 								<a> - Festa</a>
-								<p>A diversão começa e só termina as 22:00h da noite. Haverá muita musica boa e confraternização, ou seja, muita festa!</p>
+								<p>A diversão começa com muita musica boa e confraternização, ou seja, muita festa!</p>
 								</div>
 								<div class="clearfix"></div>
 							</div>
