--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,7 @@
 						<ul class="nav navbar-nav">
 							<li><a href="index.html">Início</a></li>
 							<li class="active"><a href="gallery.html">Álbum</a></li>
+							<li><a href="http://casamento.extra.com.br/#/lista-presentes/663389">Lista de <img src="images/present.png"></img></a></li>
 							<li><a href="contact.html">Dúvidas?</a></li>
 						</ul>
 						
