--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<ul class="nav navbar-nav">
 								<li class="active"><a href="index.html">Início</a></li>
 								<li><a href="gallery.html">Álbum</a></li>
-								<li><a href="http://casamento.extra.com.br/#/lista-presentes/663389">Lista de <img src="images/present.png"></img></a></li>
+								<li><a href="http://casamento.extra.com.br/#/lista-presentes/663389" target="_blank"><img src="images/present.png"> Lista de presentes!</img></a></li>
 								<li><a href="contact.html">Dúvidas?</a></li>
 							</ul>
 						</nav>
