--- a/gallery.html
+++ b/gallery.html
@@ -59,10 +59,8 @@
 			        <h2>Um pouco de <span>nós</span></h2>
 					<p><i class="fa fa-heart-o" aria-hidden="true"></i></p>
 					
-				</div>
-			 <p class="sub_para">MOMENTOS FELIZES</p>
-
-			
+					<iframe src="https://player.vimeo.com/video/243693159" width="100%" height="263" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				</div>		
 			 <div class="inner_w3l_agile_grids">
 			  <div class="col-md-4 w3_tabs_grid">
 		<div class="grid">
