--- a/index.html
+++ b/index.html
@@ -160,32 +160,17 @@
 	</div>
 	<div class="property-grids">
 		<div class="agile-homes-w3l  grid">
-			<div class="col-md-6 home-agile-left">
-				<figure class="effect-moses">
-					<img src="images/p1.jpg" alt="" />
-					<figcaption>
-						<h4>Clique e veja...</h4>
-						<p style="color:white;">
-							Lista de presente
-							<!--<a data-toggle="modal" href="#myModal">
-								<b><font  size="1" color="#ff33cc">CLIQUE AQUI</font></b>
-							</a> -->
-							<a href="http://casamento.extra.com.br/#/lista-presentes/663389" target="_blank"> 
-								<b><font  size="1" color="#ff33cc">CLIQUE AQUI</font></b>
-							</a>
-						</p>
-					</figcaption>			
-				</figure>
-			</div>
-			<div class="col-md-6 home-agile-text">
+
+			<div class="home-agile-text">
 				<h4>Cerimônia de Casamento</h4>
 				<p>Uma linda fazenda nos receberá para celebrar este dia especial de nossas vidas. Após a cerimônia, nada como uma festa para animar e comemorar 
 				ainda mais este momento! Tudo feito com muito carinho pensando em cada convidado!</p>
 				<div class="date">
 					<h5><i class="fa fa-calendar" aria-hidden="true"></i> 12 / 05 / 2018</h5>
 					<h5><i class="fa fa-clock-o" aria-hidden="true"></i> 15h até 22h</h5>
+					<h5 align="center"><img src="images/ring2.png" alt="" /></h5>
 				</div>
-				<div class="icon_wthree"><img src="images/ring2.png" alt="" /></div>
+				
 			</div>
 			<div class="clearfix"></div>	
 
@@ -355,6 +340,24 @@
 							<h5>Andréia</h5>
 						</div>
 					</div>
+					<div class="item-owl">
+						<div class="test-review">
+							<img src="images/pa84.jpg" class="img-responsive" alt=""/>
+							<h5>Gilson</h5>
+						</div>
+					</div>
+					<div class="item-owl">
+						<div class="test-review">
+							<img src="images/ma81.jpg" class="img-responsive" alt=""/>
+							<h5>Deusa</h5>
+						</div>
+					</div>
+					<div class="item-owl">
+						<div class="test-review">
+							<img src="images/pa81.jpg" class="img-responsive" alt=""/>
+							<h5>João</h5>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -442,17 +445,16 @@
 						</div>
 						<div class="map">
 							<div class="wthree_title_agile">
+								<h3>Endereço <span>& Mapa</span></h3>
 								<p><i class="fa fa-heart-o" aria-hidden="true"></i></p>
 							</div>
-							<p class="sub_para">ENDEREÇO & MAPA</p>
-							<div class="home-agile-text">
-								<p>
-									<b>
-										<font color="black">
-									 	Estrada Benedicto Olegário Chiovatto, km 2 - Zona Rural, Morungaba - SP
-										</font>
-									</b>
-								</p>
+							<p>
+								<b>
+									<font color="black">
+								 	Estrada Benedicto Olegário Chiovatto, km 2 - Zona Rural, Morungaba - SP
+									</font>
+								</b>
+							</p>
  							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d121051.5527114768!2d-46.735857679994425!3d-22.922856227021803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ced29104b992ff%3A0xb433b5189c1971bb!2sFazenda+Lageado!5e0!3m2!1spt-BR!2sbr!4v1498484897295"></iframe>
  							</div>
  						</div>
@@ -527,7 +529,7 @@
 					<div class="banner-mid-wthree hvr-buzz"><img src="images/couple.png" /></div>
 				</div>
 				<div class="copy-right">
-					<p>© 2017 Flávio & Daiane | Desenvolvido por 
+					<p>© 2018 Flávio & Daiane | Desenvolvido por 
 						<a href="http://www.linkedin.com/in/flavio7eixeira/">Flávio Teixeira</a></p>
 					</div>
 			</div>
